--- a/Vanp.Web/Views/Product/Products.cshtml
+++ b/Vanp.Web/Views/Product/Products.cshtml
@@ -81,213 +81,7 @@
                                     <!--block-title-->
                                     <!-- BEGIN BOX-CATEGORY -->
                                     <div class="box-content box-category">
-                                        <ul>
-                                            <li>
-                                                <a class="active" href="left_bar.html">Living Room</a> <span class="subDropdown minus"></span>
-                                                <ul class="level0_415" style="display:block">
-                                                    <li>
-                                                        <a href="left_bar.html"> Racks </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Display Units </a> </li>
-                                                            <li> <a href="left_bar.html"> Shoe Racks </a> </li>
-                                                            <li> <a href="left_bar.html"> Magazine Racks </a> </li>
-                                                            <li> <a href="left_bar.html"> Trunk &amp; Boxes </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Sofas </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Sofa Beds </a> </li>
-                                                            <li> <a href="left_bar.html"> Sofa Suites </a> </li>
-                                                            <li> <a href="left_bar.html"> Corner Sofas </a> </li>
-                                                            <li> <a href="left_bar.html"> Leather Sofas </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Chairs </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Recliner </a> </li>
-                                                            <li> <a href="left_bar.html"> Arm Chairs </a> </li>
-                                                            <li> <a href="left_bar.html"> Folding Chairs </a> </li>
-                                                            <li> <a href="left_bar.html"> Metal Chairs </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Tables </a><span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Side Tables </a> </li>
-                                                            <li> <a href="left_bar.html"> Console Tables </a> </li>
-                                                            <li> <a href="left_bar.html"> Set of Tables </a> </li>
-                                                            <li> <a href="left_bar.html"> Coffee Tables </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Bean Bag </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Round </a> </li>
-                                                            <li> <a href="left_bar.html"> Square </a> </li>
-                                                            <li> <a href="left_bar.html"> Novelty </a> </li>
-                                                            <li> <a href="left_bar.html"> Elongated </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Stools </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Folding </a> </li>
-                                                            <li> <a href="left_bar.html"> Iron </a> </li>
-                                                            <li> <a href="left_bar.html"> Designer </a> </li>
-                                                            <li> <a href="left_bar.html"> Wood </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                        <!--level1-->
-                                                    </li>
-                                                    <li>
-                                                        <a href="left_bar.html"> Textiles </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Curtain Rods </a> </li>
-                                                            <li> <a href="left_bar.html"> Cushions </a> </li>
-                                                            <li> <a href="left_bar.html"> Fabrics </a> </li>
-                                                            <li> <a href="left_bar.html"> Benches </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                        <!--level1-->
-                                                    </li>
-                                                    <li>
-                                                        <a href="left_bar.html"> Storage </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:none">
-                                                            <li> <a href="left_bar.html"> Buffets </a> </li>
-                                                            <li> <a href="left_bar.html"> Cabinets </a> </li>
-                                                            <li> <a href="left_bar.html"> Sideboards </a> </li>
-                                                            <li> <a href="left_bar.html"> Bookcases </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                </ul>
-                                                <!--level0-->
-                                            </li>
-                                            <!--level 0-->
-                                            <li>
-                                                <a href="left_bar.html">Dinning Room</a> <span class="subDropdown plus"></span>
-                                                <ul class="level0_455" style="display:none">
-                                                    <li>
-                                                        <a href="left_bar.html"> Dinning Sets </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:block">
-                                                            <li> <a href="left_bar.html"> Eight Seater </a> </li>
-                                                            <li> <a href="left_bar.html"> Four Seater </a> </li>
-                                                            <li> <a href="left_bar.html"> Six Seater </a> </li>
-                                                            <li> <a href="left_bar.html"> Two Seater </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Dinning Tables </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:block">
-                                                            <li> <a href="left_bar.html"> Colonial </a> </li>
-                                                            <li> <a href="left_bar.html"> Contemporary </a> </li>
-                                                            <li> <a href="left_bar.html"> Eclectic </a> </li>
-                                                            <li> <a href="left_bar.html"> Modern </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Dinning Chairs </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:block">
-                                                            <li> <a href="left_bar.html"> Colonial </a> </li>
-                                                            <li> <a href="left_bar.html"> Contemporary </a> </li>
-                                                            <li> <a href="left_bar.html"> Eclectic </a> </li>
-                                                            <li> <a href="left_bar.html"> Modern </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Sideboards </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:block">
-                                                            <li> <a href="left_bar.html"> Cabinets </a> </li>
-                                                            <li> <a href="left_bar.html"> Drawers </a> </li>
-                                                            <li> <a href="left_bar.html"> Glass </a> </li>
-                                                            <li> <a href="left_bar.html"> Modern </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Bar Stools </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:block">
-                                                            <li> <a href="left_bar.html"> Adjustable </a> </li>
-                                                            <li> <a href="left_bar.html"> Bar Height </a> </li>
-                                                            <li> <a href="left_bar.html"> Counter Height </a> </li>
-                                                            <li> <a href="left_bar.html"> Swivel </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                    <!--level1-->
-                                                    <li>
-                                                        <a href="left_bar.html"> Serving Carts </a> <span class="subDropdown plus"></span>
-                                                        <ul class="level1" style="display:block">
-                                                            <li> <a href="left_bar.html"> Glass </a> </li>
-                                                            <li> <a href="left_bar.html"> Steel </a> </li>
-                                                            <li> <a href="left_bar.html"> Traditional </a> </li>
-                                                            <li> <a href="left_bar.html"> Modern </a> </li>
-                                                            <!--end for-each -->
-                                                        </ul>
-                                                        <!--level1-->
-                                                    </li>
-                                                    <!--level1-->
-                                                </ul>
-                                                <!--level0-->
-                                            </li>
-                                            <!--level 0-->
-                                            <li>
-                                                <a href="left_bar.html">BedRoom</a> <span class="subDropdown plus"></span>
-                                                <ul class="level0_482" style="display:none">
-                                                    <li> <a href="left_bar.html"> Beds </a> <span class="subDropdown minus"></span> </li>
-                                                    <!--level1-->
-                                                    <li> <a href="left_bar.html"> Dressing Tables </a> <span class="subDropdown minus"></span> </li>
-                                                    <!--level1-->
-                                                    <li> <a href="left_bar.html"> Wardrobes </a> <span class="subDropdown minus"></span> </li>
-                                                    <!--level1-->
-                                                    <li> <a href="left_bar.html"> Mattresses </a> <span class="subDropdown minus"></span> </li>
-                                                    <!--level1-->
-                                                    <li> <a href="left_bar.html"> Bedside Tables </a> <span class="subDropdown minus"></span> </li>
-                                                    <!--level1-->
-                                                    <li> <a href="left_bar.html"> NightStands </a> <span class="subDropdown minus"></span> </li>
-                                                    <!--level1-->
-                                                </ul>
-                                                <!--level0-->
-                                            </li>
-                                            <!--level 0-->
-                                            <li> <a href="left_bar.html">Kitchen</a> </li>
-                                            <!--level 0-->
-                                            <li class="last"> <a href="blog.html">Blog</a> </li>
-                                            <!--level 0-->
-                                        </ul>
+                                       @Html.Action("GetList", "Category")
                                     </div>
                                     <!--box-content box-category-->
                                 </div>
