--- a/Vanp.Web/Views/Category/_CategoriesLeft.cshtml
+++ b/Vanp.Web/Views/Category/_CategoriesLeft.cshtml
@@ -7,7 +7,7 @@
     foreach (var category in categories)
     {
         <li>
-            <a href="/product/cat/@category.Id">@category.CategoryName </a>
+            <a href="/products/category/@category.Id">@category.CategoryName </a>
             @if (category.Category1.Any())
             {
                 i++;
