--- a/Vanp.Web/Views/Product/Products.cshtml
+++ b/Vanp.Web/Views/Product/Products.cshtml
@@ -56,11 +56,10 @@
                                         <label class="left">Sort By: </label>
                                         <ul>
                                             <li>
-                                                <a href="#">Position<span class="right-arrow"></span></a>
+                                                <a href="#"><span class="sort-by-name" style="margin-right:10px">Thời gian kết thúc</span> <span class="right-arrow"></span></a>
                                                 <ul>
-                                                    <li><a href="#">Name</a></li>
-                                                    <li><a href="#">Price</a></li>
-                                                    <li><a href="#">Position</a></li>
+                                                    <li><a href="#" data-sort-by-name="dateto">Thời gian kết thúc</a></li>
+                                                    <li><a href="#" data-sort-by-name="price">Giá</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -86,65 +85,7 @@
                                     <!--box-content box-category-->
                                 </div>
                                 <div class="side-banner">
-                                    <img src="images/sidebanner.jpg">
-                                </div>
-                                <div class="block block-layered-nav">
-                                    <div class="block-title"> Filter By</div>
-                                    <div class="block-content">
-                                        <p class="btn-tertiary"><i class="fa fa-times" aria-hidden="true"></i>&nbsp;&nbsp;Clear all</p>
-                                        <dl id="narrow-by-list">
-                                            <dt class="odd">Categories</dt>
-                                            <dd class="odd">
-                                                <ol>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span><a href="#">Sofas</a> (6)
-                                                    </li>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span><a href="#"> Chairs</a> (5)
-                                                    </li>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span><a href="#"> Tables</a> (7)
-                                                    </li>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span><a href="#">Racks</a> (5)
-                                                    </li>
-                                                </ol>
-                                            </dd>
-                                            <dt class="odd">Price</dt>
-                                            <dd class="odd">
-                                                <ol>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span> <a href="#"><span class="price">$4.00</span> - <span class="price">$5.00</span></a> (1)
-                                                    </li>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span><a href="#"><span class="price">$16.00</span> - <span class="price">$20.00</span></a> (2)
-                                                    </li>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span> <a href="#"><span class="price">$25.00</span> - <span class="price">$37.00</span></a> (4)
-                                                    </li>
-                                                    <li>
-                                                        <span class="custom-checkbox">
-                                                            <input data-search-url="#" type="checkbox">
-                                                        </span> <a href="#"><span class="price">$33.00</span> - <span class="price">$125.00</span></a> (9)
-                                                    </li>
-                                                </ol>
-                                            </dd>
-                                        </dl>
-                                    </div>
+                                    <img src="~/images/sidebanner.jpg">
                                 </div>
                             </aside>
                         </div>
