--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -52,7 +52,7 @@
             </li>
 
             <li class="nav-item  ">
-                <a href="javascript:;" class="nav-link nav-toggle">
+                <a href="/customer/listproduct" class="nav-link nav-toggle">
                     <i class="icon-heart"></i>
                     <span class="title">Quản Lý Sản Phẩm</span>
                 </a>
