add route detail product customer

--- a/Vanp.Web/Areas/Customer/Views/CProduct/CListProduct.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/CProduct/CListProduct.cshtml
@@ -16,7 +16,7 @@
                                 <a class="product_image image-wrapper" href="">
                                     <img class="front_image" alt="Pro Image" src="~/images/products/@item.Id/img1.jpg" width="264" height="230">
                                 </a>
-                                <div class="quickview top-right"> <a class="link-quickview" href=""> <i class="fa fa-search" aria-hidden="true"></i></a> </div>
+                                <div class="quickview top-right"> <a class="link-quickview" href="/customer/update/@item.Id"> <i class="fa fa-search" aria-hidden="true"></i></a> </div>
                                 <div class="box-hover">
                                     @*<ul class="add-to-links">
                                             <!-- <li><a class="link-quickview" href="quick_view.html"></a> </li>-->
