update view detail product of customer

--- a/Vanp.Web/Areas/Customer/Views/CProduct/Update.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/CProduct/Update.cshtml
@@ -59,7 +59,7 @@
         <label for="producttext">Mô tả chi tiết:</label>
         <textarea name="ProductText"></textarea>
     </div>
-    <button type="submit" class="btn btn-default">Đăng bán</button>
+    <button type="submit" class="btn btn-default">Sửa</button>
 </form>
 @section scripts{
     <script src="~/Content/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
