--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -61,7 +61,7 @@
                 </a>
             </li>
             <li class="nav-item  ">
-                <a href="account/product/insert" class="nav-link nav-toggle">
+                <a href="/account/product/insert" class="nav-link nav-toggle">
                     <i class="fa fa-buysellads"></i>
                     <span class="title">Đăng bán</span>
                 </a>
