update product model

--- a/Vanp.Web/Areas/Customer/Views/CProduct/Update.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/CProduct/Update.cshtml
@@ -12,7 +12,7 @@
         }
     </style>
 }
-<form method="post" action="/product/insert" class="insert-form" enctype="multipart/form-data">
+<form method="post" action="/customer/product/update" class="insert-form" enctype="multipart/form-data">
     <div class="row">
         <div class="form-group col-md-4">
             <label for="productname">Tên sản phẩm</label>
