--- a/Vanp.Web/Views/Product/Products.cshtml
+++ b/Vanp.Web/Views/Product/Products.cshtml
@@ -96,3 +96,7 @@
         <!-- Main Container End -->
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/Scripts/apps/products.js"></script>
+}
